# RustifyDDoS

./: Cargo.toml  LICENSE.txt  README.md  init.sh  init_ubuntu.sh  init_windows.sh
.github/workflows/: alpine.yml  ubuntu.yml  windows.yml
docs/: head.html  icon.xcf
src/: main.rs
