[package]
name = "rddos"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/GamePlayer-8/RustifyDDoS"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["blocking"] }
